--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <head>
-    <title> Hello World! </title>
+    <title> tÊnis vans </title>
 </head>
 <body>
-    <h1>HELLO WORLD!</h1>
-    <h5>este é o primeiro site que estou criando</h5>
+    <h1>TÊNIS VANS!</h1>
+     <img src="imagens/tenis_vans.webp" height="200" width="250">
+     <a href="https://www.google.com">Clique aqui para abrir o google </a>
+    <h5>Tenis vans é lindo, estiloso e confortável, também é ótimo para andar de skate, principalmente o Old School!</h5>
+    <p>Vans é uma fabricante americana de vestuário e calçados para BMX, snowboard, skate, surf e motocross, sediada em Cypress. </p>
+    <ol>
+        <li>bonito</li>
+        <li>estiloso</li>
+        <li>confortável</li>
+        </ol>
+    <ul>
+        <li>muito bom</li>
+        <li>bem bonito</li>
+        <li>muito confortável</li>
+    </ul>
+    
 </body>
