--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <head>
-    <title> tÊnis vans </title>
+    <title> TÊNIS VANS </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>TÊNIS VANS!</h1>
-     <img src="imagens/tenis_vans.webp" height="200" width="250">
-     <a href="https://www.google.com">Clique aqui para abrir o google </a>
+    <div id="imagem">
+     <img src="imagens/tenis_vans.webp" height="430" width="450">
+    </div>
+     <a href="https://www.vans.com.br/tenis-old-skool-black-white/p/1002001070011U?gclid=Cj0KCQjw8e-gBhD0ARIsAJiDsaXWZ5v9grXuAKW9jo0IAeGMaKryxYD2IVt2RO_Sybb-dyxFfb3uIdkaAkx-EALw_wcB">Clique aqui para abrir o google </a>
     <h5>Tenis vans é lindo, estiloso e confortável, também é ótimo para andar de skate, principalmente o Old School!</h5>
     <p>Vans é uma fabricante americana de vestuário e calçados para BMX, snowboard, skate, surf e motocross, sediada em Cypress. </p>
     <ol>
@@ -18,5 +21,29 @@
         <li>bem bonito</li>
         <li>muito confortável</li>
     </ul>
-    
+    <table border="1" cellspacing="1" cellpadding="5">
+        <tr>
+            <td> Nome </td>
+            <td> Cor </td>
+            <td> Tamanho </td>
+
+        </tr>
+        <tr>
+            <td> Vans Old School </td>
+            <td> Preto </td>
+            <td> 34 - 35 </td>
+        </tr>
+        <tr>
+            <td> Vans Old School </td>
+            <td> Vermelho </td>
+            <td> 35 - 36 </td>
+
+        </tr>
+        <tr>
+            <td> Vans Old School </td>
+            <td> Azul </td>
+            <td> 36 - 37 </td>
+
+        </tr>
+    </table>
 </body>
