Atualizando o index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>TÊNIS VANS!</h1>
+    <h1><i>TÊNIS VANS!</i></h1>
     <div id="imagem">
      <img src="imagens/tenis_vans.webp" height="430" width="450">
     </div>
      <a href="https://www.vans.com.br/tenis-old-skool-black-white/p/1002001070011U?gclid=Cj0KCQjw8e-gBhD0ARIsAJiDsaXWZ5v9grXuAKW9jo0IAeGMaKryxYD2IVt2RO_Sybb-dyxFfb3uIdkaAkx-EALw_wcB">Clique aqui para abrir o google </a>
-    <h5>Tenis vans é lindo, estiloso e confortável, também é ótimo para andar de skate, principalmente o Old School!</h5>
+    <h5><mark><big-text><strong>Tenis vans é lindo, estiloso e confortável, também é ótimo para andar de skate, principalmente o Old School!</strong></big-text><mark></h5>
     <p>Vans é uma fabricante americana de vestuário e calçados para BMX, snowboard, skate, surf e motocross, sediada em Cypress. </p>
     <ol>
         <li>bonito</li>
